    mount curlftpfs in terminal for password entry #251
    update custom protocol handler script in manual to use run_in_terminal
    mouse back/fwd buttons work anywhere in window
    don't show empty (all items context hidden) custom submenus #215
    path bar tab completion reworked, sorted
    added path bar option Auto Seek
    path bar unquote quoted paths
0.8.5   2013-01-14:
    fix left-click ignored in Open context submenu #31 #228
    Dialog fix progress bar; add auto-pulse
    [gtk3] task progress pulse don't show percent
    debian package add XXXXXXXX to mktemp template [dist]
    add key shortcut labels to Prefs default drag action
    left-click in toolbar config menu shows design menu
    fix Open|Default with multiple dirs selected
    gtk3 leaving beta; gtk3 debian package; ppa add spacefm-gtk3
    navigation/activation keys on desktop #247
    added Popups|Above Others and All Workspaces #226
    desktop dialogs on current workspace #246
    desktop Create New uses new creation dialog
    fix View|Events dialog formatting
0.8.4   2012-12-21:
    fix detail dbl click selects next #218
    fix dlg command pipe fast
    added task property popup_handler; man update
    added task list Show Output
    internal socket cmds show and focus NAME optional to present dlg
    Dialog add [SAVEFILE] argument to --viewer
    fix text wrapping corner case #206 [BwackNinja]
    Added context for several strings #220
    fix left-click ignored in context menu #31 #228
    [gtk3] add expand property to app chooser dlg for gtk3 #223
    Dialog --chooser --save DIR opens in DIR
    [gtk3] Dialog label wrap min width closes BwackNinja issue #25
    Dialog send stdout of external commands to /dev/null
    socket add props edit_file and run_in_terminal
    [gtk3] create archive dlg expand options entry
    dbus and libdbus dependency changed to optional
    main-window.c include wait.h #239
0.8.3   2012-11-24:
    added --socket-cmd #142
    added View|Events menu