@@ -15,6 +15,8 @@
     path bar tab completion reworked, sorted
     added path bar option Auto Seek
     path bar unquote quoted paths
+    path bar cmd history in completion popup
+    path bar instance-wide cmd history
 0.8.5   2013-01-14:
     fix left-click ignored in Open context submenu #31 #228
     Dialog fix progress bar; add auto-pulse
